ping/overlays/preprod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ping
          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
